src/views/snapshots/git_local_review__views__main_view__tests__main_view_render_reviews_loading_state_loaded_with_reviews.snap
---
source: src/views/main_view.rs
expression: render_app_to_terminal_backend(app)
---
"┌git-local-review──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Git Local Review - Press '?' for help                                                                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Reviews───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│> Review 2 (2025-01-01 01:00)                                                                                                                                 │"
"│  Review 1 (2025-01-01 00:00)                                                                                                                                 │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
